force-app/main/default/objects/Animal_Action__c/Animal_Action__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Used to capture scheduled actions against an animal</description>
    <label>Animal Action</label>
    <nameField>
        <displayFormat>ACTION{00000}</displayFormat>
        <label>Animal Action Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>