force-app/main/default/objects/Animal_Action__c/fields/Action_Lookup_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Lookup_Name__c</fullName>
    <formula>Animal__r.Animal_Name__c + &quot; - &quot; + Action_Type__c + &quot; - &quot; + TEXT(DAY(DATEVALUE(Date_Time_of_Action__c)))+&quot;/&quot;+ TEXT(MONTH(DATEVALUE(Date_Time_of_Action__c)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(Date_Time_of_Action__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Lookup Name</label>
    <type>Text</type>
</CustomField>