force-app/main/default/objects/Animal_Action__c/fields/Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Status__c</fullName>
    <inlineHelpText>The status of the action</inlineHelpText>
    <label>Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
            <value>
                <fullName>Given - See Comments</fullName>
                <isActive>false</isActive>
                <label>Given - See Comments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>