force-app/main/default/objects/Animal_Action__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A condition related to a Treatment Action</inlineHelpText>
    <label>Condition</label>
    <referenceTo>Condition__c</referenceTo>
    <relationshipLabel>Animal Actions</relationshipLabel>
    <relationshipName>Animal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>