force-app/main/default/objects/Animal_Action__c/fields/Date_Time_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Action_Completed__c</fullName>
    <label>Date/Time Action Completed</label>
    <type>DateTime</type>
</CustomField>