force-app/main/default/objects/Animal_Action__c/fields/Date_Time_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Action__c</fullName>
    <inlineHelpText>The date &amp; time of when the action happened or when it should take place</inlineHelpText>
    <label>Date/Time of Action</label>
    <type>DateTime</type>
</CustomField>