force-app/main/default/objects/Animal_Action__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>The description of the action</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>