force-app/main/default/objects/Animal_Action__c/fields/Exercise_Duration__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Duration__c</fullName>
    <label>Exercise Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>