force-app/main/default/objects/Animal_Action__c/fields/Given_By__c.field-meta.xml
<CustomField>
    <fullName>Given_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Action was given by?</inlineHelpText>
    <label>Given By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animal Actions</relationshipLabel>
    <relationshipName>Animal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>