force-app/main/default/objects/Animal_Action__c/fields/Previous_Action_Detail__c.field-meta.xml
<CustomField>
    <fullName>Previous_Action_Detail__c</fullName>
    <formula>IF(ISBLANK( Previous_Animal_Action__c ), &quot; &quot;, &quot;Previous Vaccine on &quot; &amp; TEXT(DAY(DATEVALUE(Previous_Animal_Action__r.Date_Time_of_Action__c))) &amp;&quot;/&quot;&amp; TEXT(MONTH(DATEVALUE(Previous_Animal_Action__r.Date_Time_of_Action__c)))&amp;&quot;/&quot;&amp; TEXT(YEAR(DATEVALUE(Previous_Animal_Action__r.Date_Time_of_Action__c))) &amp; &quot; For &quot; &amp;  Previous_Animal_Action__r.Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Action Detail</label>
    <type>Text</type>
</CustomField>