force-app/main/default/objects/Animal_Action__c/fields/Previous_Animal_Action__c.field-meta.xml
<CustomField>
    <fullName>Previous_Animal_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the Vaccination Process to link Animal Action records of type Vaccination together</description>
    <label>Previous Animal Action</label>
    <referenceTo>Animal_Action__c</referenceTo>
    <relationshipLabel>Animal Actions</relationshipLabel>
    <relationshipName>Animal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>