force-app/main/default/objects/Animal_Action__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <description>Only used in Treatment RecordType</description>
    <inlineHelpText>The type of Treatment</inlineHelpText>
    <label>Treatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Vaccination</fullName>
            </value>
            <value>
                <fullName>Physio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>