force-app/main/default/objects/Animal_Action__c/recordTypes/Exercise.recordType-meta.xml
<RecordType>
    <fullName>Exercise</fullName>
    <active>true</active>
    <label>Exercise</label>
</RecordType>