force-app/main/default/objects/Animal_Action__c/recordTypes/Nutrition.recordType-meta.xml
<RecordType>
    <fullName>Nutrition</fullName>
    <active>true</active>
    <label>Nutrition</label>
</RecordType>