force-app/main/default/objects/Animal_Action__c/recordTypes/Treatment.recordType-meta.xml
<RecordType>
    <fullName>Treatment</fullName>
    <active>true</active>
    <label>Treatment</label>
</RecordType>