force-app/main/default/objects/Animal_Action__c/validationRules/Action_Completed_Check_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Action_Completed_Check_Date</fullName>
    <active>true</active>
    <description>When the Action Completed checkbox is true, Action Completed date must be entered</description>
    <errorConditionFormula>AND( Action_Completed__c, ISNULL( Date_Time_Action_Completed__c ))</errorConditionFormula>
    <errorDisplayField>Date_Time_Action_Completed__c</errorDisplayField>
    <errorMessage>The Date/Time of the Completed Action must be entered, if Action is marked as complete</errorMessage>
</ValidationRule>