force-app/main/default/objects/Animal_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Animal__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Date_Time_of_Action__c</columns>
    <columns>Date_Time_Action_Completed__c</columns>
    <columns>Action_Completed__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>