force-app/main/default/objects/Animal_Action__c/listViews/Nutrition.listView-meta.xml
<ListView>
    <fullName>Nutrition</fullName>
    <columns>Action_Type__c</columns>
    <columns>Date_Time_of_Action__c</columns>
    <columns>Description__c</columns>
    <columns>Given_By__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Animal_Action__c.Nutrition</value>
    </filters>
    <label>Nutrition</label>
</ListView>