force-app/main/default/objects/Animal_Action__c/listViews/Treatments.listView-meta.xml
<ListView>
    <fullName>Treatments</fullName>
    <columns>Action_Type__c</columns>
    <columns>Action_Status__c</columns>
    <columns>Date_Time_of_Action__c</columns>
    <columns>Description__c</columns>
    <columns>Given_By__c</columns>
    <columns>Condition__c</columns>
    <columns>Treatment_Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Animal_Action__c.Treatment</value>
    </filters>
    <label>Treatments</label>
</ListView>